Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5377

IMPALAD Crashed With the impala starting large number of JDBC accessing

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.10.0
    • Backend
    • None
    • Apache impala branch eb54287fb4c635c8fc6c96872e87ad5a98b16339

    Description

      from the symptom point of view like this
      query access before ExecEnv::StartServices() which init mem_tracker_

      (gdb) bt
      #0 impala::MemTracker::CheckLimitExceeded (this=0x0) at /export/ldb/online/impala_master/be/src/runtime/mem-tracker.h:331
      #1 impala::MemTracker::LimitExceeded (this=0x0) at /export/ldb/online/impala_master/be/src/runtime/mem-tracker.h:234
      #2 impala::QueryState::Init (this=this@entry=0x973e400, rpc_params=...) at /export/ldb/online/impala_master/be/src/runtime/query-state.cc:98
      #3 0x0000000000cf550a in impala::QueryExecMgr::StartQuery (this=0xb137aa0, params=...) at /export/ldb/online/impala_master/be/src/runtime/query-exec-mgr.cc:51
      #4 0x0000000000d7e020 in impala::ImpalaInternalService::ExecQueryFInstances (this=0xa07bf00, return_val=..., params=...) at /export/ldb/online/impala_master/be/src/service/impala-internal-service.cc:50
      #5 0x0000000000fcbfb4 in impala::ImpalaInternalServiceProcessor::process_ExecQueryFInstances (this=0xbced020, seqid=1, iprot=<optimized out>, oprot=0x96c8e40, connectionContext=<optimized out>)
      at /export/ldb/online/impala_master/be/generated-sources/gen-cpp/ImpalaInternalService.cpp:1433
      #6 0x0000000000fcb326 in impala::ImpalaInternalServiceProcessor::dispatchCall (this=0xbced020, iprot=0x96c8e70, oprot=0x96c8e40, fname=..., seqid=1, connectionContext=0xbf138d0)
      at /export/ldb/online/impala_master/be/generated-sources/gen-cpp/ImpalaInternalService.cpp:1403
      #7 0x00000000008c52cc in apache::thrift::TDispatchProcessor::process (this=0xbced020, in=..., out=..., connectionContext=0xbf138d0)
      at /export/ldb/online/impala_master/thirdparty/fbthrift-2016.12.19.00/build/include/thrift/lib/cpp/TDispatchProcessor.h:124
      #8 0x00007f05f6c1901f in apache::thrift::server::TThreadedServer::Task::run (this=0xbf13880) at server/TThreadedServer.cpp:65
      #9 0x00007f05f6c25594 in apache::thrift::concurrency::PthreadThread::threadMain (arg=<optimized out>) at concurrency/PosixThreadFactory.cpp:194
      #10 0x0000003cd3c079d1 in start_thread () from /lib64/libpthread.so.0
      #11 0x0000003cd34e886d in clone () from /lib64/libc.so.6

      Attachments

        Issue Links

          Activity

            People

              henryr Henry Robinson
              zzjj yyzzjj
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: